# pattern_mattching

./: .gitignore  README.md  pyproject.toml
backend/: main.py  requirements.txt  schemas.py
backend/api/: match.py
backend/core/: geometry.py  image_io.py
backend/core/algorithms/: __init__.py  base.py  ccoeff.py  ccoeff_edge.py  registry.py
backend/tests/: test_api.py  test_ccoeff.py  test_ccoeff_edge.py  test_geometry.py
frontend/: index.html
frontend/css/: components.css  main.css
frontend/js/: api.js  app.js  canvas.js  io.js  pattern.js  table.js
specs/: 001_spec.md  1st.md
