[project]
name = "pattern-matching"
version = "0.1.0"
description = "Web tool for marking template patterns and running OpenCV template matching."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "deryann", email = "deryann@gmail.com" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
pattern-matching-serve = "backend.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
# Install dev deps by default for local development.
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
